--- a/wine/Dockerfile
+++ b/wine/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:12-slim
+FROM ubuntu:24.04
 
 RUN apt update \
        && apt install -y \
@@ -10,8 +10,7 @@ RUN apt update \
 RUN dpkg --add-architecture i386 \
        && mkdir -pm755 /etc/apt/keyrings \
        && wget -O /etc/apt/keyrings/winehq-archive.key https://dl.winehq.org/wine-builds/winehq.key \
-       && wget -NP /etc/apt/sources.list.d/ https://dl.winehq.org/wine-builds/debian/dists/bookworm/winehq-bookworm.sources \
-       && sed -i -e's/ main/ main contrib/g' /etc/apt/sources.list.d/debian.sources \
+       && wget -NP /etc/apt/sources.list.d/ https://dl.winehq.org/wine-builds/ubuntu/dists/noble/winehq-noble.sources \
        && apt update \
        && apt install -y --install-recommends winehq-stable \
        && apt clean \
